--- a/lexes_files/flight-search-page.html
+++ b/lexes_files/flight-search-page.html
@@ -10,8 +10,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="flight-search.html" target="_blank">Book</a></li>
-                <li><a href="manage-booking.html" target="_blank">Manage</a></li>
+                <li><a href="flight-search_page.html" target="_blank">Book</a></li>
+                <li><a href="manage-booking_page.html" target="_blank">Manage</a></li>
                 <li><a href="about.html" target="_blank">About</a></li>
             </ul>
         </nav>
