--- a/lexes_files/home.html
+++ b/lexes_files/home.html
@@ -5,17 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlyDream Airlines</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
         .banner {
-            background-image: "banner.png";
+            background-image: url("banner.png");
             background-size: cover;
-            background-position: center;
+            background-position: 50% 80%;
             color: white;
-            padding: 100px 0;
+            padding: 200px 0;
+            position: relative;
+            font-family: 'Martian Mono', monospace;
         }
+
+        
         .logo {
             max-height: 150px;
         }
+        .tab-content {
+            background-color: rgba(255, 255, 255, 0.9);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            padding: 20px;
+            z-index: 10;
+            margin-top: 20px;
+            position: relative;
+        }
+
+        .text-shadow {
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            font-size: 40px;
+        }
+
+        
     </style>
 </head>
 <body>
@@ -40,7 +61,7 @@
     <main>
         <section class="banner">
             <div class="container">
-                <h1 class="display-4">Welcome back, @meowlan2024</h1>
+                <h1 class="display-4 text-shadow">Welcome back, <br/>@meowlan2024</h1>
             </div>
         </section>
 
@@ -146,7 +167,7 @@
                 </div>
             </div>
             <hr class="bg-light">
-            <p class="text-center mb-0"></p>
+            <p class="text-center mb-0">FlyDreamAir x meowLAN</p>
         </div>
     </footer>
 
