--- a/lexes_files/home.html
+++ b/lexes_files/home.html
@@ -39,7 +39,7 @@
         
     </style>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header class="bg-light">
         <nav class="navbar navbar-expand-lg navbar-light container">
             <a class="navbar-brand" href="#">
@@ -140,7 +140,7 @@
         </section>
     </main>
 
-    <footer class="bg-dark text-light py-4 mt-5">
+    <footer class="bg-dark text-light py-4 mt-5 mt-auto py-3">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
