--- a/lexes_files/flights.html
+++ b/lexes_files/flights.html
@@ -9,6 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
         /* Existing Styles */
+
+        .btn[aria-expanded="false"] .when-open,
+        .btn[aria-expanded="true"] .when-closed {
+            display: none;
+        }
+
         .banner {
             background-image: url("banner.png");
             background-size: cover;
@@ -230,50 +236,55 @@
                             <div class="text-end">
                               <h5 class="card-title">Economy</h5>
                               <p class="card-text">500 AUD</p>
-                              <button class="btn btn-link toggle-flight" data-flight="1">▼</button>
+                              <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#flight-1" aria-expanded="false" aria-controls="flight-1">
+                                <span class="when-closed">▼ Select</span>
+                                <span class="when-open">▲ Close</span>
+                              </button>
                             </div>
                           </div>
-                          <div class="flight-details mt-3" id="flight-1" style="display: none;">
-                            <h6>SELECT A FARE</h6>
-                            <div class="row">
-                              <div class="col-4">
-                                <div class="card">
-                                  <div class="card-body text-center">
-                                    <h6>Economy</h6>
-                                    <p>500 AUD</p>
-                                    <div class="form-check">
-                                      <input class="form-check-input" type="radio" name="fare-1" id="fare-1-1">
-                                      <label class="form-check-label" for="fare-1-1"></label>
+                          <div class="collapse" id="flight-1">
+                            <div class="flight-details mt-3">
+                              <h6>SELECT A FARE</h6>
+                              <div class="row">
+                                <div class="col-4">
+                                  <div class="card">
+                                    <div class="card-body text-center">
+                                      <h6>Economy</h6>
+                                      <p>500 AUD</p>
+                                      <div class="form-check ">
+                                        <input class="form-check-input" type="radio" name="fare-1" id="fare-1-1">
+                                        <label class="form-check-label" for="fare-1-1"></label>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="col-4">
+                                  <div class="card">
+                                    <div class="card-body text-center">
+                                      <h6>Premium Economy</h6>
+                                      <p>700 AUD</p>
+                                      <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="fare-1" id="fare-1-2">
+                                        <label class="form-check-label" for="fare-1-2"></label>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="col-4">
+                                  <div class="card">
+                                    <div class="card-body text-center">
+                                      <h6>Business</h6>
+                                      <p>900 AUD</p>
+                                      <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="fare-1" id="fare-1-3">
+                                        <label class="form-check-label" for="fare-1-3"></label>
+                                      </div>
                                     </div>
                                   </div>
                                 </div>
                               </div>
-                              <div class="col-4">
-                                <div class="card">
-                                  <div class="card-body text-center">
-                                    <h6>Premium Economy</h6>
-                                    <p>700 AUD</p>
-                                    <div class="form-check">
-                                      <input class="form-check-input" type="radio" name="fare-1" id="fare-1-2">
-                                      <label class="form-check-label" for="fare-1-2"></label>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="col-4">
-                                <div class="card">
-                                  <div class="card-body text-center">
-                                    <h6>Business</h6>
-                                    <p>900 AUD</p>
-                                    <div class="form-check">
-                                      <input class="form-check-input" type="radio" name="fare-1" id="fare-1-3">
-                                      <label class="form-check-label" for="fare-1-3"></label>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
+                              <button class="btn btn-primary mt-3">CONFIRM</button>
                             </div>
-                            <button class="btn btn-primary mt-3">CONFIRM</button>
                           </div>
                         </div>
                       </div>
@@ -291,52 +302,58 @@
                             <div class="text-end">
                               <h5 class="card-title">Economy</h5>
                               <p class="card-text">398 AUD</p>
-                              <button class="btn btn-link toggle-flight" data-flight="2">▼</button>
+                              <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#flight-2" aria-expanded="false" aria-controls="flight-2">
+                                <span class="when-closed">▼ Select</span>
+                                <span class="when-open">▲ Close</span>
+                              </button>
                             </div>
                           </div>
-                          <div class="flight-details mt-3" id="flight-2" style="display: none;">
-                            <h6>SELECT A FARE</h6>
-                            <div class="row">
-                              <div class="col-4">
-                                <div class="card">
-                                  <div class="card-body text-center">
-                                    <h6>Economy</h6>
-                                    <p>398 AUD</p>
-                                    <div class="form-check">
-                                      <input class="form-check-input" type="radio" name="fare-2" id="fare-2-1">
-                                      <label class="form-check-label" for="fare-2-1"></label>
+                          <div class="collapse" id="flight-2">
+                            <div class="flight-details mt-3">
+                              <h6>SELECT A FARE</h6>
+                              <div class="row">
+                                <div class="col-4">
+                                  <div class="card">
+                                    <div class="card-body text-center">
+                                      <h6>Economy</h6>
+                                      <p>398 AUD</p>
+                                      <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="fare-2" id="fare-2-1">
+                                        <label class="form-check-label" for="fare-2-1"></label>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="col-4">
+                                  <div class="card">
+                                    <div class="card-body text-center">
+                                      <h6>Premium Economy</h6>
+                                      <p>598 AUD</p>
+                                      <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="fare-2" id="fare-2-2">
+                                        <label class="form-check-label" for="fare-2-2"></label>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="col-4">
+                                  <div class="card">
+                                    <div class="card-body text-center">
+                                      <h6>Business</h6>
+                                      <p>798 AUD</p>
+                                      <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="fare-2" id="fare-2-3">
+                                        <label class="form-check-label" for="fare-2-3"></label>
+                                      </div>
                                     </div>
                                   </div>
                                 </div>
                               </div>
-                              <div class="col-4">
-                                <div class="card">
-                                  <div class="card-body text-center">
-                                    <h6>Premium Economy</h6>
-                                    <p>598 AUD</p>
-                                    <div class="form-check">
-                                      <input class="form-check-input" type="radio" name="fare-2" id="fare-2-2">
-                                      <label class="form-check-label" for="fare-2-2"></label>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="col-4">
-                                <div class="card">
-                                  <div class="card-body text-center">
-                                    <h6>Business</h6>
-                                    <p>798 AUD</p>
-                                    <div class="form-check">
-                                      <input class="form-check-input" type="radio" name="fare-2" id="fare-2-3">
-                                      <label class="form-check-label" for="fare-2-3"></label>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
+                              <button class="btn btn-primary mt-3">CONFIRM</button>
                             </div>
-                            <button class="btn btn-primary mt-3">CONFIRM</button>
                           </div>
                         </div>
+                      </div>
                       </div>
                     </div>
                   </div>
