--- a/lexes_files/flights.html
+++ b/lexes_files/flights.html
@@ -128,7 +128,7 @@
         </section>
 
         <!-- Departure and Return Section -->
-        <section class="container">
+        <section class="container-md">
             <div class="row text-center">
                 <div class="col-md-6">
                     <p class="mono">Departing</p>
@@ -183,7 +183,7 @@
         <!-- Flight Selection Section -->
         <section>
             <!-- Flight Selection Section -->
-<section>
+<section class="container">
     <div>
         <h2 class="mono page-header">Flights</h2>
     </div>
@@ -251,7 +251,7 @@
                                     <div class="card-body text-center">
                                       <h6>Economy</h6>
                                       <p>500 AUD</p>
-                                      <div class="form-check ">
+                                      <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="fare-1" id="fare-1-1">
                                         <label class="form-check-label" for="fare-1-1"></label>
                                       </div>
@@ -263,7 +263,7 @@
                                     <div class="card-body text-center">
                                       <h6>Premium Economy</h6>
                                       <p>700 AUD</p>
-                                      <div class="form-check">
+                                      <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="fare-1" id="fare-1-2">
                                         <label class="form-check-label" for="fare-1-2"></label>
                                       </div>
@@ -275,7 +275,7 @@
                                     <div class="card-body text-center">
                                       <h6>Business</h6>
                                       <p>900 AUD</p>
-                                      <div class="form-check">
+                                      <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="fare-1" id="fare-1-3">
                                         <label class="form-check-label" for="fare-1-3"></label>
                                       </div>
@@ -317,7 +317,7 @@
                                     <div class="card-body text-center">
                                       <h6>Economy</h6>
                                       <p>398 AUD</p>
-                                      <div class="form-check">
+                                      <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="fare-2" id="fare-2-1">
                                         <label class="form-check-label" for="fare-2-1"></label>
                                       </div>
@@ -329,7 +329,7 @@
                                     <div class="card-body text-center">
                                       <h6>Premium Economy</h6>
                                       <p>598 AUD</p>
-                                      <div class="form-check">
+                                      <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="fare-2" id="fare-2-2">
                                         <label class="form-check-label" for="fare-2-2"></label>
                                       </div>
@@ -341,7 +341,7 @@
                                     <div class="card-body text-center">
                                       <h6>Business</h6>
                                       <p>798 AUD</p>
-                                      <div class="form-check">
+                                      <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="fare-2" id="fare-2-3">
                                         <label class="form-check-label" for="fare-2-3"></label>
                                       </div>
