--- a/lexes_files/flights.html
+++ b/lexes_files/flights.html
@@ -95,9 +95,7 @@
             <a class="navbar-brand" href="#">
                 <img src="./logo.png" alt="FlyDream" class="logo">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -106,6 +104,22 @@
                 </ul>
             </div>
         </nav>
+        <hr />
+
+        <div class="collapse" id="navbarToggleExternalContent">
+            <div class="bg-light p-4">
+              <h5 class="text-black h4">Menu</h5>
+              <span><a href="#">Manage your booking</a></span>
+            </div>
+          </div>
+          <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+          </nav>
+        </div>
     </header>
 
     <main>
@@ -118,6 +132,9 @@
                 <div class="col mono center bg-light">
                     <span class="button-text">Seat selection</span>
                 </div>
+                <div class="col mono center bg-light">
+                  <span class="button-text">In-flight</span>
+              </div>
                 <div class="col mono center bg-light">
                     <span class="button-text">Details</span>
                 </div>
