--- a/lexes_files/flights.html
+++ b/lexes_files/flights.html
@@ -7,84 +7,8 @@
     <title>FlyDream Airlines</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <style>
-        /* Existing Styles */
-
-        .btn[aria-expanded="false"] .when-open,
-        .btn[aria-expanded="true"] .when-closed {
-            display: none;
-        }
-
-        .banner {
-            background-image: url("banner.png");
-            background-size: cover;
-            background-position: 50% 80%;
-            color: white;
-            padding: 200px 0;
-            position: relative;
-            font-family: 'Martian Mono', monospace;
-        }
-
-        .mono {
-            font-family: 'Martian Mono', monospace;
-        }
-
-        .logo {
-            max-height: 150px;
-        }
-
-        .tab-content {
-            background-color: rgba(255, 255, 255, 0.9);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            padding: 20px;
-            z-index: 10;
-            margin-top: 20px;
-            position: relative;
-        }
-
-        .text-shadow {
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            font-size: 40px;
-        }
-
-        .center {
-            text-align: center;
-        }
-
-        .row {
-            padding: 20px 20px 20px 20px;
-        }
-
-        .row div {
-            padding: 10px 10px 10px 10px;
-        }
-
-        .active {
-            background-color: #fecb00;
-        }
-
-        .button-text {
-            font-size: 10pt;
-        }
-
-        .modify-section {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .page-header {
-            text-align: center;
-        }
-
-        .progress-tracker .col {
-            text-align: center;
-        }
-
-        .progress-tracker .col.active {
-            color: white;
-            background-color: #fecb00;
-        }
     </style>
 </head>
 
@@ -126,7 +50,7 @@
         <!-- Progress Tracker -->
         <section class="container my-5">
             <div class="row progress-tracker">
-                <div class="col mono center active">
+                <div class="col mono center action">
                     <span class="button-text">Flights</span>
                 </div>
                 <div class="col mono center bg-light">
