--- a/lexes_files/flights.html
+++ b/lexes_files/flights.html
@@ -13,39 +13,46 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-
-    <header class="bg-light">
-        <nav class="navbar navbar-expand-lg navbar-light container">
-            <a class="navbar-brand" href="#">
-                <img src="./logo.png" alt="FlyDream" class="logo">
-            </a>
-            
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <hr />
-
-        <div class="collapse" id="navbarToggleExternalContent">
-            <div class="bg-light p-4">
-              <h5 class="text-black h4">Menu</h5>
-              <span><a href="#">Manage your booking</a></span>
-            </div>
-          </div>
-          <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            </div>
-          </nav>
+  <header class="bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light container-fluid">
+        <a class="navbar-brand" href="home.html"><img src="./logo.png" alt="FlyDream" class="logo"></a>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Login</a>
+                </li>
+            </ul>
         </div>
-    </header>
+    </nav>
+    <hr />
+    <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bg-light p-4">
+            <div class="row">
+                <h5 class="text-black h4 mono">Menu</h5>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <span><a href="#">Link</a></span><br />
+                    <span><a href="#">Link 2</a></span><br />
+                    <span><a href="#">Link 3</a></span>
+                </div>
 
+                <div class="col-4">
+                    <span><a href="#">Link</a></span><br />
+                    <span><a href="#">Link 2</a></span><br />
+                    <span><a href="#">Link 3</a></span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
+  </header>
     <main>
         <!-- Progress Tracker -->
         <section class="container my-5">
